
Changelog
=========

1.3.0 (unreleased)
------------------

- Integrates latest libres release which switches to serialized-only queries.
  [href]

- Move styles from plonetheme.onegov to this package.
  [lknoepfel]

1.2.0 (2015-02-10)
------------------

*Warning*: The seantis.reservation release 1.2.0 changed a lot internally,
which is why you can't directly upgrade from seantis.reservation releases
prior to 1.0.12 (September 27th, 2013) to the 1.2.0.

If you do have such an old release, install seantis.reservation 1.1.5 first,
run all upgrade steps, and then install 1.2.0.

- Moves the core to a new, plone-independent Python Module (Libres).
  [href]

1.1.5 (2014-09-23)
------------------

- Changes export/report/latest permissions on the actions to reflect the
  actual permissions needed to open these views. Fixes #164.
  [href]

- Fixes last day not being included in the monthlry report. Closes #163.
  [href]

- Adds email template validation. Closes #156.
  [href]

- Fixes export error when using a unicode character in the resource title.
  Closes #165.
  [href]

- Spell email as 'E-Mail' in German - always. Fixes #166.
  [href]

1.1.4 (2014-08-18)
------------------

- Fixes allocation search not working correctly with partly available whole-day
  allocations. Closes #162.
  [href]

1.1.3 (2014-08-15)
------------------

- Fixes wrong times being used for whole day reservations in the search.
  [href]

- Changes search view to be way more ajaxy, giving the impression of a speedup.
  [href]

- Adds the ability to delete allocations found when searching. Fixes #161.
  [href]

1.1.2 (2014-08-12)
------------------

- Adds the ability to change the times of certain reservations.
  [href]

- Correctly deals with group-allocations in the search view.
  [href]

- Disable the reservation button if no selection is made in the search
  view.
  [href]

- Adds the ability to change the email address of a reservation.
  [href]
